Add demo 22: the FP16 ladder with a CUDA Tile rung
Demo 18's ladder with a fourth rung inserted between the hand-written
mma.sync rung and the vendor libraries: the same GEMM written against
TileContext and compiled through CUDA Tile. Same language, same hardware,
same validated output, measured the same way.

Kernel time at n=1024 (nsys, steady state), RTX 4090 / driver 610.57.04 /
nvcc 13.3.73:

  naive          537.2 us
  kcTiled        331.3 us
  kcMma          181.7 us   hand-written mma.sync
  tiles           65.7 us   CUDA Tile, ct::mma        <- 2.8x over kcMma
  CUTLASS         29.9 us
  cuBLAS          20.2 us                             <- 3.3x over tiles

Both halves matter and the README says so: the tile compiler beats a careful
hand-written MMA kernel against the same tensor cores, and a vendor library
tuned per architecture is still ahead of one 32x32 tile shape with no
pipelining hints. Nsight Compute counters explain it - a quarter of the
instructions and a fortieth of the bank conflicts, paid for in registers.

Wall clock on the same run is far flatter (2.0x, not 8.2x) because every
rung pays the same JVM dispatch at this size; the demo prints both and says
which to quote.

compare-ladder.sh now accepts 22, run-cutile-demos.sh covers four demos
(12 passed, 0 failed), evidence in results/raw/34-cutile-ladder/.